# AI_Trading

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  backtest.py  dashboard.py  docker-compose.yml  main.py  params.yaml  pyproject.toml  railway.toml  render.yaml  run_check.py  streamlit_app.py
scripts/: entrypoint.sh  entrypoint_dashboard.sh  seed_pipeline.sh
trading/: __init__.py  client.py  config.py  exceptions.py  journal.py  logger.py  market.py
trading/alerts/: __init__.py  telegram.py
trading/backtest/: __init__.py  engine.py  result.py
trading/data/: __init__.py  capitol_trades.py  features.py  historical.py  pipeline.py  universe.py
trading/models/: __init__.py  lightgbm_model.py
trading/portfolio/: __init__.py  kelly.py  optimizer.py
trading/reasoning/: __init__.py  claude_analyst.py  signal_aggregator.py
trading/risk/: __init__.py  manager.py
trading/signals/: __init__.py  insider_trades.py  macro.py  news_sentiment.py
trading/strategies/: __init__.py  ai_signal.py  base.py  copy_trading.py  trailing_stop.py  wheel.py
